// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly 1`] = `
<button
  className="cat-button cat-button--default cat-button--square cat-button--md cat-button--padding-md"
  disabled={false}
  style={Object {}}
  type="button"
>
  <span
    className="cat-button__children"
  >
    Button
  </span>
</button>
`;

exports[`Button renders props:loading 1`] = `
<button
  className="cat-button cat-button--default cat-button--square cat-button--md cat-button--loading cat-button--padding-md"
  disabled={false}
  style={Object {}}
  type="button"
>
  <Loading
    className="cat-button__loading"
    color="#537682"
    size={14}
    visible={true}
  />
  <span
    className="cat-button__children"
  >
    Button
  </span>
</button>
`;

exports[`Button renders props:loading,type 1`] = `
<button
  className="cat-button cat-button--primary cat-button--square cat-button--md cat-button--loading cat-button--padding-md"
  disabled={false}
  style={Object {}}
  type="button"
>
  <Loading
    className="cat-button__loading"
    color="#fff"
    size={14}
    visible={true}
  />
  <span
    className="cat-button__children"
  >
    Button
  </span>
</button>
`;
